deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyas
  labels:
    app: eyas
spec:
  type: ClusterIP
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
      name: http
  selector:
    app: eyas
